remove excess code
remove the part that auto refresh page every 100 seconds

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="refresh" content="100">
+<!-- 	<meta http-equiv="refresh" content="100"> -->
 	<title>Eric's resume</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.css">
