--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-<!-- 	<meta http-equiv="refresh" content="100"> -->
+	<meta http-equiv="refresh" content="100">
 	<title>Eric's resume</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.css">
@@ -176,18 +176,60 @@
 	<div class="club col-percent-80 white mx-auto pt-3 pb-3 px-5 mb-3">
 		<div class="title text-title col-percent-100 border-top">Club experiences</div>
 		<div class="subtitle chinese-font mt--10px col-percent-100 border-bottom">社團經歷</div>
-		<div class="I_am_divider row-2"></div>
+		<div class="I_am_divider row-2 justify-content-start"></div>
 
-		<div class="club_intro d-flex">
-			<div class="rounded-xlg mr-3 " id="club_intro_photo"></div>
+		<div class="club_intro d-flex mb-5p5">
+			<div class="rounded-xlg mr-3" id="club_intro_photo"></div>
 			<div class="club_intro_text chinese-font pl-3 border-left border-color-darkgray">
-				<span class="text-l mb-3">中原愛潮關懷社：</span><br>
+				<span class="text-l">中原愛潮關懷社：</span><br>
 				我們的助人熱情始終不變<br>
 				桃園地區500多位的清寒國中生<br>
 				因為有了早餐不在飢餓<br>
 				許多個性憂鬱的同學們<br>
 				因為有了陪伴而敞開了心胸
 			</div>
+		</div>
+
+		<div class="chirstmas d-flex justify-content-end mb-5p5">
+			<div class="chirstmas_text chinese-font pr-3 border-right border-color-darkgray">
+				<span class="text-l">聖誕慈善嘉年華：</span><br>
+				每年當聖誕節來臨的前夕我們都會進行募款<br>
+				為與馬朝關懷協會合作的早餐計畫共同努力<br>
+				活動當天，我擔任的是交通組<br>
+				看見會場內川流不息的人潮<br>
+				即便外面在寒冷我的心始終保持著溫暖<br>
+				藉由合作使我能夠學會與人溝通<br>
+				並輝灑自己對於助人的熱情
+			</div>
+			<div class="rounded-xlg ml-3 " id="chirstmas_photo"></div>
+		</div>
+
+		<div class="market_intro d-flex justify-content-start mb-5p5">
+			<div class="rounded-xlg mr-3" id="market_photo"></div>
+			<div class="market_intro_text chinese-font pl-3 border-left border-color-darkgray">
+				<span class="text-l">親子慈善園遊會：</span><br>
+				這是場兼具慈善與商業活動為一體的園遊會<br>
+				豐富的內容，從食品、日用品到娛樂性質的攤位齊聚一堂<br>
+				活動當天，我是場布組的志工兼小組長<br>
+				我很感謝當天一同協助我們的工作坊學生<br>
+				以及熱心的國中生志工們<br>
+				若沒有你們我們就無法順利進行了
+			</div>
+		</div>
+		<div class="welcome d-flex justify-content-end mb-5p5">
+			<div class="welcome_text chinese-font pr-3 border-right border-color-darkgray">
+				<span class="text-l">誰是中原人：</span><br>
+				這個活動是專為即將加入中原的新鮮人所舉辦<br>
+				藉由一系列的團康活動結合校園巡覽<br>
+				使新生能夠認識彼此及校園周遭的環境<br>
+				在這個活動中，我設計了一個遊戲叫做夜市人生<br>
+				希望藉此能使參加活動的同學能彼此認識<br>
+				並且能與大家有更多的互動<br>
+				想當年我也是這樣來到社團並學會了許多事物<br>
+				我的大學生活也就此豐富了起來
+				
+			</div>
+			<div class="rounded-xlg ml-3 " id="welcome_photo"></div>
 		</div>
 	</div>
 
