add status indicator

--- a/index.html
+++ b/index.html
@@ -278,7 +278,11 @@
 				<div class="Aboutme_text pl-2">
 					<span class="text-xl font-weight-bold">冠廷の小栈</span><br>
 					上線日期：2019/5/8<br>
-					目前狀態：良好<br>
+					<div class="d-flex status">
+						目前狀態：<div class="led-good">●</div>
+						<div class="underline-dotted">良好</div>
+						<div class="right-tooltip">幾乎沒有問題</div>
+					</div>
 					相關技術：<br>
 					html5/css3/js<br><br>
 
@@ -295,7 +299,11 @@
 				<div class="midterm_text pl-2">
 					<span class="text-xl font-weight-bold">中原大學，我們的第二個家</span><br>
 					上線日期：2019/4/11<br>
-					目前狀態：普通<br>
+					<div class="d-flex status">
+						目前狀態：<div class="led-normal">●</div>
+						<div class="underline-dotted">普通</div>
+						<div class="right-tooltip">穩定，但載入速度稍慢</div>
+					</div>
 					相關技術：<br>
 					html5/css3/js<br><br>
 
@@ -312,7 +320,11 @@
 				<div class="trip_text pl-2">
 					<span class="text-xl font-weight-bold">回味無窮的義大利之旅</span><br>
 					上線日期：2018/10/28<br>
-					目前狀態：尚可<br>
+					<div class="d-flex status">
+						目前狀態：<div class="led-stillok">●</div>
+						<div class="underline-dotted">尚可</div>
+						<div class="right-tooltip">javascrpit不穩定，容易出現幻燈片錯亂</div>
+					</div>
 					相關技術：<br>
 					html4/html5/css3/js<br><br>
 
@@ -329,10 +341,14 @@
 				<div class="junior_text pl-2">
 					<span class="text-xl font-weight-bold">冠廷的嗨翻天俱樂部</span><br>
 					上線日期：2013/2/11<br>
-					目前狀態：不佳<br>
+					<div class="d-flex status">
+						目前狀態：<div class="led-bad">●</div>
+						<div class="underline-dotted">不佳</div>
+						<div class="right-tooltip">可供檢視，但不穩定(語法支援性差)</div>
+					</div>
 					相關技術：<br>
 					html4/css3<br><br>
-<!-- http://chen1998.yabi.me/www/index.htm -->
+
 					設計內容：<br>
 					視覺化界面&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<br><br>
 					<span class="button"><button onclick="warning()" type="button" class="btn btn-outline-blue blue-white-hover rounded-pill ml-1 mr-1">點我進入</button></span>
